# github-action

./: CMakeLists.txt  main.cpp
.github/workflows/: cmake-multi-platform.yml
lib/: CMakeLists.txt  lib.cpp
